avance 45